RESOLVED FIXED63947
ASSERT running Object.preventExtensions(Math.sin)
https://bugs.webkit.org/show_bug.cgi?id=63947
Summary ASSERT running Object.preventExtensions(Math.sin)
Gavin Barraclough
Reported 2011-07-05 11:20:42 PDT
This is due to calling scope() on a hostFunction as a part of calling createPrototypeProperty to reify the prototype property. But host functions don't have a prototype property anyway!
Attachments
The patch (4.17 KB, patch)
2011-07-05 11:23 PDT, Gavin Barraclough
oliver: review+
Gavin Barraclough
Comment 1 2011-07-05 11:23:40 PDT
Created attachment 99732 [details] The patch
Gavin Barraclough
Comment 2 2011-07-05 12:03:24 PDT
Fixed in r90402
Eric Seidel (no email)
Comment 4 2011-07-05 23:02:29 PDT
They're all crashing in JSC. webkit-patch what-broke tells me this is the most likely change.
Eric Seidel (no email)
Comment 5 2011-07-05 23:03:37 PDT
Actually, it may have been http://trac.webkit.org/changeset/90401.
Note You need to log in before you can comment on or make changes to this bug.